# STM32-VSCode-CMake-streamlined

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  STM32-CMake-base.ioc  STM32-VSCode-CMake-streamlined.ioc  STM32L4A6AGIX_FLASH.ld  STM32L4A6AGIX_RAM.ld  STM32L4A6ZGTX_FLASH.ld  STM32L4A6ZGTX_RAM.ld  gcc-arm-none-eabi.cmake  readme.md
Application/: .clang-tidy  main.cpp
Core/Inc/: main.h
Core/Src/: gpio.c  main.c
